plugins {
	id 'org.springframework.boot' version '2.2.2.RELEASE'
	id 'io.spring.dependency-management' version '1.0.8.RELEASE'
	id 'java'
}

group = 'com.hyw'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '1.8'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-web-services'
	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.1'
	implementation 'junit:junit:4.12'
	implementation("log4j:log4j:1.2.17")

	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'mysql:mysql-connector-java'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation('org.springframework.boot:spring-boot-starter-test') {
		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
	}

	compile group: 'org.projectlombok', name: 'lombok'
	
	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'

	// 用于判断文件类型
	compile group: 'org.apache.tika', name: 'tika-core', version: '1.23'

	// 用于图片转换为base64
	compile group: 'commons-fileupload', name: 'commons-fileupload', version: '1.4'
	// 用于图片缩略图
	compile group: 'net.coobird', name: 'thumbnailator', version: '0.4.8'
	// 用于取图片Exif
	compile group: 'com.drewnoakes', name: 'metadata-extractor', version: '2.12.0'

	// 加载sqlite数据库
	compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.28.0'
	// json转换
	compile group: 'com.alibaba', name: 'fastjson', version: '1.2.54'
	// json
	implementation group: 'org.json', name: 'json', version: '20210307'


	// 动态数据源使用
//	compile group: 'org.apache.tomcat', name: 'tomcat-jdbc', version: '9.0.35'

	// https://mvnrepository.com/artifact/org.wso2.apache.httpcomponents/httpclient
	implementation group: 'org.wso2.apache.httpcomponents', name: 'httpclient', version: '4.3.1.wso2v1'

	//JGIT
	compile group: 'org.eclipse.jgit', name: 'org.eclipse.jgit', version: '5.5.1.201910021850-r'
	// QLExpress 表达式计算
	compile group: 'com.alibaba', name: 'QLExpress', version: '3.2.0'

	// https://mvnrepository.com/artifact/org.quartz-scheduler/quartz
	implementation group: 'org.quartz-scheduler', name: 'quartz', version: '2.3.2'

	// Excel操作工具
	compile 'com.github.crab2died:Excel4J:3.0.0-Alpha'
	compile 'org.apache.poi:poi:3.15'
	compile 'org.apache.poi:poi-ooxml:3.15'
	compile 'xerces:xercesImpl:2.11.0'
	// 读取大excel文件时使用
	implementation group: 'com.monitorjbl', name: 'xlsx-streamer', version: '2.1.0'

	// Java代码解析
	implementation group: 'com.github.javaparser', name: 'javaparser-core', version: '3.23.0'

	// https://mvnrepository.com/artifact/org.aspectj/aspectjweaver
	compile group: 'org.aspectj', name: 'aspectjweaver', version: '1.9.7'
	// https://mvnrepository.com/artifact/org.aspectj/aspectjrt
	compile group: 'org.aspectj', name: 'aspectjrt', version: '1.9.7'


	// https://mvnrepository.com/artifact/com.baomidou/mybatis-plus-generator
	compile group: 'com.baomidou', name: 'mybatis-plus-generator', version: '3.4.1'

}

test {
	useJUnitPlatform()
}
